Перенесен рендер в JS, добавлен обработчик клика

--- a/index.html
+++ b/index.html
@@ -10,22 +10,9 @@
 </head>
 
 <body>
-    <div class="app">
-        <div class="level-selection">
-            <h1 class="title">Выбери сложность</h1>
-            <div class="radio-toolbar">
-                <input type="radio" id="radio1" name="radios" value="Легкий">
-                <label for="radio1">1</label>
+    <div id="main"></div>
 
-                <input type="radio" id="radio2" name="radios" value="Средний">
-                <label for="radio2">2</label>
-
-                <input type="radio" id="radio3" name="radios" value="Сложный">
-                <label for="radio3">3</label>
-            </div>
-            <button class="button">Старт</button>
-        </div>
-    </div>
+    <script type="module" src="./index.js"></script>
 </body>
 
 </html>
