--- a/index.html
+++ b/index.html
@@ -1,18 +1,15 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="ru">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Game</title>
+        <link rel="stylesheet" href="style.css" />
+    </head>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Game</title>
-    <link rel="stylesheet" href="style.css">
+    <body>
+        <div id="main"></div>
 
-</head>
-
-<body>
-    <div id="main"></div>
-
-    <script type="module" src="./index.js"></script>
-</body>
-
+        <script type="module" src="./index.js"></script>
+    </body>
 </html>
